Added basic html elements to webpage.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
  <head>
+ <title>NAO Remote Control</title>
  <link type="text/css" rel="stylesheet" href="css/main.css" />
+ <meta charset="UTF-8">
  </head>
+ 
  <body>
+ <a href="/html/connectionList.html">Connect</a>
+ <a href="help.txt">Help</a>
+ <img src="img/naoBanner.png" alt="NAO Remote Control">
+ 
+ <div>
+ <h1>Welcome</h1>
+ <p title="Introduction">
+ This is the homepage for the web GUI to control NAO robots.
+ </p>
+ </div>
+ 
  </body>
 </html>
