--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
  <title>NAO Remote Control</title>
  <link type="text/css" rel="stylesheet" href="css/main.css" />
  <meta charset="UTF-8">
+ 
+ <!--
+ <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+ <script> 
+ $(function(){
+  $("#header").load("header.html"); 
+  $("#footer").load("footer.html"); 
+ });
+ </script> 
+ -->
  </head>
  
  <body>
- <a href="/html/connectionList.html">Connect</a>
- <a href="help.txt">Help</a>
+ 
+ <div id="navigationBar">
+ <ul>
+ <li><a href="/html/connectionList.html">Connect</a>
+ <li><a href="help.txt" target="_blank">Help</a> 
+ </ul>
+ </div>
+ 
  <img src="img/naoBanner.png" alt="NAO Remote Control">
  
  <div>
@@ -17,6 +33,8 @@
  This is the homepage for the web GUI to control NAO robots.
  </p>
  </div>
+ 
+ <div id="footer"></div>
  
  </body>
 </html>
