--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
  
  <div id="navigationBar">
  <ul>
- <li><a href="/html/connectionList.html">Connect</a>
- <li><a href="help.txt" target="_blank">Help</a> 
+ <li><a href="/html/connectionList.html">Connect</a> </li>
+ <li><a href="help.txt" target="_blank">Help</a> </li>
+ <li class="rightSideLink"><a href="#about">About</a></li>
+ <li class="rightSideLink"><a href="#login">Login</a></li>
+ 
  </ul>
  </div>
  
