Added missing folder hierarchy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <div id="navigationBar">
  <ul>
  <li><a href="/html/connectionList.html">Connect</a> </li>
- <li><a href="help.txt" target="_blank">Help</a> </li>
+ <li><a href="/help/help.txt" target="_blank">Help</a> </li>
  <li class="rightSideLink"><a href="#about">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  
