Fixed dead links

--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
  <head>
+ 
  <title>NAO Remote Control</title>
  <link type="text/css" rel="stylesheet" href="css/main.css" />
  <meta charset="UTF-8">
  
- <!--
- <script src="//code.jquery.com/jquery-1.10.2.js"></script>
- <script> 
- $(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
- });
- </script> 
- -->
  </head>
  
  <body>
  
  <div id="navigationBar">
  <ul>
- <li><a href="/html/connectionList.html">Connect</a> </li>
- <li><a href="/help/help.txt" target="_blank">Help</a> </li>
+ <li><a href="html/connectionList.html">Connect</a> </li>
+ <li><a href="help/help.txt" target="_blank">Help</a> </li>
  <li class="rightSideLink"><a href="#about">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  
@@ -37,7 +29,13 @@
  </p>
  </div>
  
- <div id="footer"></div>
+ <footer>
+ <ul class="footer">
+ <li class="footer-li">Web interface created by: Isaac Ayala</li>
+ <!-- <li>Contact information: <a href="mailto:A01184862@itesm.mx">A01184862@itesm.mx</a>.</li> -->
+  
+ </ul>
+ </footer>
  
  </body>
 </html>
