Fixed a couple of dead links in the navigation bar

--- a/html/about.html
+++ b/html/about.html
@@ -1,8 +1,63 @@
 <html>
   <head>
-    <title></title>
-    <meta content="">
-    <style></style>
+    <title>About NAO web GUI</title>
+    <meta charset="UTF-8">
+    <link type="text/css" rel="stylesheet" href="../css/main.css" />
+    
   </head>
-  <body></body>
+  
+  <body>
+  
+ <navigation>
+ 
+ <ul>
+ <li><a href="../index.html">Home</a> </li>
+ <li><a href="connectionList.html">Connect</a> </li>
+ <li><a href="../help/help.txt" target="_blank">Help</a> </li>
+ <li class="rightSideLink"><a href="html/about.html">About</a></li>
+ <li class="rightSideLink"><a href="#login">Login</a></li>
+ </ul>
+ 
+ </navigation>
+ 
+   <h1>About us</h1>
+  <p>
+  The NAO web GUI software is a project aimed to explore the possibilities
+  of using a WAN to control one or more NAO robots at the same time from 
+  any of the supported browsers.
+  </p>
+ 
+ <h2>The team </h2>
+<table>
+    <tr>
+    <th>Name</th>
+    <th>Github</th>
+    </tr>
+  
+    <tr>
+    <td>Isaac Ayala</td>
+    <td>der-coder</td>
+    </tr>
+  
+    <tr>
+    <td>Frans Ram&#237rez</td>
+    <td>Frans06</td>
+    </tr>
+  
+    <tr>
+    <td>Joel L&#243pez</td>
+    <td>joeljair13</td>
+    </tr>
+  
+</table> 
+ 
+ <footer>
+ <ul class="footer">
+ <li class="footer-li">Web interface created by: Isaac Ayala</li>
+ <!-- <li>Contact information: <a href="mailto:A01184862@itesm.mx">A01184862@itesm.mx</a>.</li> -->
+  
+ </ul>
+ </footer>
+ 
+  </body>
 </html>
