--- a/html/connectionList.html
+++ b/html/connectionList.html
@@ -1,8 +1,34 @@
 <html>
   <head>
-    <title></title>
-    <meta content="">
-    <style></style>
+  
+    <title>Available Robots</title>
+    <meta charset="UTF-8">
+    <link type="text/css" rel="stylesheet" href="../css/main.css" />
+    
   </head>
-  <body></body>
+  
+  <body>
+  
+ <navigation>
+ 
+ <ul>
+ <li><a href="../index.html">Home</a> </li>
+ <li><a href="connectionList.html">Connect</a> </li>
+ <li><a href="../help/help.txt" target="_blank">Help</a> </li>
+ <li class="rightSideLink"><a href="html/about.html">About</a></li>
+ <li class="rightSideLink"><a href="#login">Login</a></li>
+ </ul>
+ 
+ </navigation>
+ 
+ 
+ <footer>
+ <ul class="footer">
+ <li class="footer-li">Web interface created by: Isaac Ayala</li>
+ <!-- <li>Contact information: <a href="mailto:A01184862@itesm.mx">A01184862@itesm.mx</a>.</li> -->
+  
+ </ul>
+ </footer>
+ 
+  </body>
 </html>
