--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
  
  <body>
  
- <div id="navigationBar">
+ <navigation>
  <ul>
+ <li><a href="index.html">Home</a> </li>
  <li><a href="html/connectionList.html">Connect</a> </li>
  <li><a href="help/help.txt" target="_blank">Help</a> </li>
- <li class="rightSideLink"><a href="#about">About</a></li>
+ <li class="rightSideLink"><a href="html/about.html">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  
  </ul>
- </div>
+ </navigation>
  
- <img src="img/naoBanner.png" alt="NAO Remote Control">
+<img src="img/naoBanner.png" alt="NAO Remote Control" id="banner">
  
  <div>
  <h1>Welcome</h1>
