--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
  <li><a href="../index.html">Home</a> </li>
  <li><a href="connectionList.html">Connect</a> </li>
  <li><a href="../help/help.txt" target="_blank">Help</a> </li>
- <li class="rightSideLink"><a href="html/about.html">About</a></li>
+ <li class="rightSideLink"><a href="about.html">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  </ul>
  
