--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
  <head>
  
  <title>NAO Remote Control</title>
- <link type="text/css" rel="stylesheet" href="css/main.css" />
+ <link type="text/css" rel="stylesheet" href="main.css" />
  <meta charset="UTF-8">
  
  </head>
@@ -13,15 +13,15 @@
  <navigation>
  <ul>
  <li><a href="index.html">Home</a> </li>
- <li><a href="html/connectionList.html">Connect</a> </li>
- <li><a href="help/help.txt" target="_blank">Help</a> </li>
+ <li><a href="connectionList.html">Connect</a> </li>
+ <li><a href="/help" target="_blank">Help</a> </li>
  <li class="rightSideLink"><a href="html/about.html">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  
  </ul>
  </navigation>
  
-<img src="img/naoBanner.png" alt="NAO Remote Control" id="banner">
+<img src="../img/naoBanner.png" alt="NAO Remote Control" id="banner">
  
  <div>
  <h1>Welcome</h1>
