Added templates folder

--- a/html/index.html
+++ b/html/index.html
@@ -14,14 +14,14 @@
  <ul>
  <li><a href="index.html">Home</a> </li>
  <li><a href="connectionList.html">Connect</a> </li>
- <li><a href="/help" target="_blank">Help</a> </li>
+ <li><a href="help.txt" target="_blank">Help</a> </li>
  <li class="rightSideLink"><a href="html/about.html">About</a></li>
  <li class="rightSideLink"><a href="#login">Login</a></li>
  
  </ul>
  </navigation>
  
-<img src="../img/naoBanner.png" alt="NAO Remote Control" id="banner">
+<img src="naoBanner.png" alt="NAO Remote Control" id="banner">
  
  <div>
  <h1>Welcome</h1>
