--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
  </head>
  
  <body>
- 
+ <!--
  <navigation>
  <ul>
  <li><a href="index.html">Home</a> </li>
@@ -20,6 +20,9 @@
  
  </ul>
  </navigation>
+ -->
+ 
+% include('header.tpl')
  
 <img src="naoBanner.png" alt="NAO Remote Control" id="banner">
  
